--- a/01 Basics.ipynb
+++ b/01 Basics.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "774eae8b-a521-4311-bc89-295a2f0b48a6",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "ab633eaf-e8aa-4f04-8e23-5f1ad7495461",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "e9043743-b3cb-4039-a3b2-958746900117",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
        "array([ 8,  6,  2,  4, 17, 20,  4,  8,  5,  6])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "467a552b-ed27-4c7a-be72-c58a2cc9a406",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "(10,)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "20ba142c-a642-48a0-91f2-9134eff575f2",
    "metadata": {},
    "outputs": [],
@@ -1864,7 +1864,7 @@
    "id": "c7151aab-7e67-4486-9eef-c70dfcdd73b1",
    "metadata": {},
    "source": [
-    " ##### making shape 4,1,3  4 block/layers , 1 row , 3 is column"
+    " ##### making shape 4,1,3  ....   4 block/layers , 1 row , 3 is column"
    ]
   },
   {
@@ -1927,21 +1927,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "765b7fff-6e60-4b51-b6d0-d2a134608381",
    "metadata": {},
    "outputs": [],
    "source": [
-    "  "
+    "array = np.array([[[1,2,3],[4,5,6]], [[7,8,9],[10,11,12]]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "1b349a6b-2aa2-4a6c-bb50-5075dd07f81c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3],\n",
+       "        [ 4,  5,  6]],\n",
+       "\n",
+       "       [[ 7,  8,  9],\n",
+       "        [10, 11, 12]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "026259c9-b32f-4a56-817b-8709cc6249f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2, 3)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array.shape"
+   ]
   },
   {
    "cell_type": "code",
