operations on array

--- a/04 Operations on array.ipynb
+++ b/04 Operations on array.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "5ed52cdc-e379-40d3-8458-eb3dadab9ed5",
    "metadata": {},
    "outputs": [],
@@ -386,12 +386,12 @@
    "id": "653deb82-3388-4b16-b96a-2d5dfc7d057b",
    "metadata": {},
    "source": [
-    "#### CROS prodcut 2 vectore"
+    "#### CROS prodcut 2 vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "a844d593-ad92-4e1a-a8f6-f89cf491c5c0",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "8042202c-9cf6-4351-93b0-cb08b377fa1c",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "array([3, 4, 5])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "7a27dd75-6c74-40bd-9d3e-620f684609b2",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
        "array([7, 8, 9])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "42a7d534-5cc9-410c-9dd2-4d18a20d8e44",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "9e8b7c9b-b117-48b1-b218-50307d1e6a22",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "array([-4,  8, -4])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "5a3fcd68-7bdd-4da3-a607-4a3be80474fb",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "1953e37f-0166-47ab-b066-8eeab2996a0b",
    "metadata": {},
    "outputs": [
@@ -506,13 +506,13 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.dot(a)"
+    "c.dot(b)"
    ]
   },
   {
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9598cd-8c9b-4a70-ad49-ab826cfd39de",
+   "id": "201ed2dc-6fe9-4a5c-b5d3-3290a2ec6397",
    "metadata": {},
    "outputs": [],
    "source": []
